--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,7 +26,7 @@ h1 {
   line-height: 1.1;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     color: rgba(0, 0, 0, 0.87);
     background-color: #fff;
